--- a/src/index.css
+++ b/src/index.css
@@ -13,9 +13,7 @@ body {
 .pointer{
   cursor: pointer;
 }
-.items{
-  border-radius: 15px;
-}
+
 
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -28,3 +26,14 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+.part2 img:hover{
+  transform: scale(1.05);
+  transition: transform 0.3s ease-in-out;
+  overflow: hidden;
+}
+.part2 .items{
+  overflow: hidden;
+  border-radius: 20px;
+  background-color: #64b8ff;
+}
+
